--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FaceSnatcher</string>
     <string name="action_settings">Settings</string>
+    <string name="next_button_text">集めた顔を拝見</string>
 </resources>
